--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-DB_URI=mongodb+srv://karishmaupreti044:qwertyqwerty@cluster0.jdqxklr.mongodb.net/Ecommerce?retryWrites=true&w=majority
+DB_URI="mongodb://127.0.0.1:27017/Ecommerce"
 
 
 
